fix: revert dropping newlines; fix z-index of menu (#392)

--- a/client/src/css/level.css
+++ b/client/src/css/level.css
@@ -315,7 +315,6 @@ td code  {
   right: 0;
   top: 100%;
   background-color: #fff;
-  z-index: 1;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: -.1rem .3rem .3rem 0 rgba(0, 0, 0, 0.1);
